# qsim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  engineinterface.cpp  engineinterface.hpp  front.kdev4  kernelinterface.cpp  kernelinterface.hpp  main.cpp  memdef.h  preferences.h  shader.hpp
.kdev4/: front.kdev4
input/: input.cpp  input.hpp
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/imgui/: CMakeLists.txt
libraries/tracy/: CMakeLists.txt
libraries/tracy/client/: TracyProfiler.cpp
libraries/tracy/common/: TracySocket.cpp  TracySystem.cpp
logger/: logger.cpp  logger.hpp
overlay/: overlay.cpp  overlay.h
renderers/: osd.cpp  osd.h  scene copy.cpp  scene.cpp  scene.h
resources/shaders/: osd.frag  osd.vert
shaders/: osd.fs  shader.frag  shader.vert
utils/: loadmcm.cpp  loadmcm.h  mcmtest.cc
